--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
             <title>Ahmed hasim</title>
-
+            <link href='http://fonts.googleapis.com/earlyaccess/cairo.css' rel='stylesheet' type='text/css'/>
 
             <style>
             body{
