--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
             <title>Ahmed hasim</title>
-            <link href='http://fonts.googleapis.com/earlyaccess/cairo.css' rel='stylesheet' type='text/css'/>
+            <link href='http://fonts.googleapis.com/earlyaccess/amiri.css' rel='stylesheet' type='text/css'/>
 
             <style>
             body{
@@ -13,7 +13,7 @@
                         *{
                             margin:0;
                             padding:0;
-                            font-family:cairo;
+                            font-family: amiri;
                         }
                         body{
 
