--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         *{
                             margin:0;
                             padding:0;
-                            font-family: cairo;
+                            font-family: 'cairo';
                         }
                         body{
 
