--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
                 @import url(‘https://fonts.googleapis.com/css?family=Cairo‘);
             body{
               background-color: #eee;
+              font-family: cairo;
+              font-family: 'cairo';
+
             
             }
 
@@ -15,6 +18,7 @@
                         *{
                             margin:0;
                             padding:0;
+                            font-family: cairo;
                             font-family: 'cairo';
                         }
                         body{
