--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 
     <head>
             <title>Ahmed hasim</title>
-            
+            <link href="https://fonts.googleapis.com/css?family=Cairo|Tajawal&display=swap" rel="stylesheet"  >
 
             <style>
                 @import url(‘https://fonts.googleapis.com/css?family=Cairo‘);
             body{
               background-color: #eee;
-              font-family: cairo;
-              font-family: 'cairo';
+              font-family: Cairo;
+              font-family: 'Cairo';
 
             
             }
@@ -18,8 +18,8 @@
                         *{
                             margin:0;
                             padding:0;
-                            font-family: cairo;
-                            font-family: 'cairo';
+                            font-family: Cairo;
+                            font-family: 'Cairo';
                         }
                         body{
 
