--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                             margin:  auto;
                             font-weight:600;
                             color: rgba(97, 80, 84, 1);
-                            margin-top:120px;
+                            margin-top:220px;
                             font-size:20px; 
 
                         }
                         main button{
-                            width:190px;
+                            width:90%;
                             padding:1%;
                             font-size:21px;
                             margin:5px;
@@ -100,7 +100,7 @@
                             width:100%;
                         }
                         main .login{
-                            width:190px;
+                            width:90%;
                             padding:1%;
                             font-size:21px;
                             margin:7%;
